Refactor: remove ckEntityRepositoryAggregation from CkServiceImpl and rename CkResource to CkJoularResource